fix bugs:product name and pricenot align center

--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -19,6 +19,7 @@
       margin: 0px;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: center;
     }
   }
   .product-tips {
